--- a/style.css
+++ b/style.css
@@ -8,25 +8,34 @@ body {
 }
 
 header {
-    display: flex;   
-    flex-direction: column;       
+    display: flex;       
     width: 847px;
     height: 220px;
-    background-color: rgb(60, 60, 170);
+    background-color: whitesmoke;
     border-right: 3px solid black;
-    color: aliceblue;
+    color: rgb(30, 30, 30);
     font-family: 'Lato', sans-serif; 
 }
 
-header h1 {
+header div {
+    display: flex;
+    flex-wrap: wrap;
+    width: 300px;
+    height: 220px;
+    background-color: rgb(40, 135, 200);
+}
+
+header div h1 {
+    position: absolute;
     font-size: 45px;
-    margin-top: 50px;
+    margin-top: 60px;
     margin-left: 50px;
 }
 
-header p {
+header div p {
+    position: absolute;
     font-size: 20px;
-    margin-top: 15px;
+    margin-top: 150px;
     margin-left: 50px;
 }
 
@@ -61,11 +70,11 @@ section a:hover {
 
 aside {
     font-family: 'Lato', sans-serif; 
-    width: 330px;
+    width: 300px;
     height: 580px;
     display: flex;
     flex-direction: column;
-    background-color: rgb(60, 60, 170);
+    background-color: rgb(40, 135, 200);
 }
 
 aside h2 {
@@ -92,39 +101,39 @@ aside ul li {
 
 main {
     display: flex;
-    width: 517px;
+    width: 547px;
     height: 580px;
-    background-color: aliceblue;
+    background-color: whitesmoke;
     border-right: 3px solid black;
     flex-direction: column;
     font-family: 'Lato', sans-serif; 
 }
 
 main article h2 {
-    font-size: 22px;
-    background-color: rgb(110, 110, 170);
+    font-size: 25px;
+    background-color: rgb(120, 200, 255);
     margin: 25px 20px;
     padding-left: 10px;
     color: aliceblue;
-    border-left: 5px solid rgb(60, 60, 170);
+    border-left: 5px solid rgb(40, 135, 200);
 }
 
 main article h2:hover {
     cursor: pointer;
-    background-color: rgb(60, 60, 170);
+    background-color: rgb(40, 135, 200);
 }
 
 main article h3 {
-    font-size: 16px;
+    font-size: 17px;
     margin-left: 25px;
 }
 
 main article h3 strong {
-    margin-left: 15px;
+    margin-left: 17px;
 }
 
 main article ul li {
-    font-size: 15px;
+    font-size: 17px;
     font-family: 'Raleway', sans-serif;
     margin-bottom: 5px;
 }
@@ -133,7 +142,7 @@ footer {
     display: flex;
     width: 847px;
     height: 110px;
-    background-color: rgb(60, 60, 170);
+    background-color: rgb(40, 135, 200);
     border-right: 3px solid black;
     align-items: center;
     flex-direction: column;
